apps/base/laf-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laf-api
  namespace: laf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laf-api
  template:
    metadata:
      labels:
        app: laf-api
    spec:
      nodeSelector:
        workload: services
      containers:
        - name: laf-api
          image: ghcr.io/fabriciojm/laf-api:latest
          ports:
            - name: http
              containerPort: 8000
