apps/base/laf-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laf-api
  namespace: laf
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: laf-api
  type: ClusterIP
